fix: try fix menu icons alignment on mobile

--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -154,7 +154,7 @@
         background-size: cover;
         width: 25px;
         height: 25px;
-        left: 75px;
+        left: 80px;
     }
     .nav-list ul li a {
         font-weight: 200;
